[hotfix] Fix flickering in data explorer slide view

--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -96,3 +96,8 @@
     height: 0px;
 }
 
+.mw-100 {
+    max-width: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
